# cash_management

./: .flake8  pyproject.toml
.github/workflows/: django.yml
cash_flow/: models.py  tests.py
cash_flow/migrations/: 0001_initial.py
django_project/: settings.py
