[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.2"
python = "^3.8"
[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.4"
black = "^22.8.0"
flake8 = "^5.0.4"

